17. Changing code based on sonalQube analysis